syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.common";

package com.glance.spaces.zapp.content.common;

import "com/glance/spaces/zapp/content/common/icon.proto";

message ElementCta {
  string cta_text = 1;
  string cta_url = 2;
  Icon cta_icon = 3;
}